refactor: ajuste no card

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <div id="carousel-cards-content" class="timeline-carousel__item-wrapper" data-js="timeline-carousel">
 
       <!--Timeline item-->
-    <div class="timeline-carousel__item">
+   <!-- <div class="timeline-carousel__item">
         <div class="timeline-carousel__image">
           <div class="media-wrapper media-wrapper&#45;&#45;overlay"
             style="background: url('https://via.placeholder.com/550x320/171717/cccccc?text=550x320') center center; background-size:cover;">
@@ -156,7 +156,7 @@
             mauris vitae ultricies leo integer malesuada. Semper feugiat nibh sed pulvinar proin gravida hendrerit
             lectus./p>
         </div>
-      </div>
+      </div> -->
       <!--/Timeline item-->
 
     </div>
