--- a/index.html
+++ b/index.html
@@ -144,17 +144,15 @@
       <!--Timeline item-->
    <!-- <div class="timeline-carousel__item">
         <div class="timeline-carousel__image">
-          <div class="media-wrapper media-wrapper&#45;&#45;overlay"
-            style="background: url('https://via.placeholder.com/550x320/171717/cccccc?text=550x320') center center; background-size:cover;">
+          <div class="media-wrapper media-wrapper--overlay"
+            style="background: url('${character.imageUrl}') center center; 
+            background-size:cover;">
           </div>
         </div>
         <div class="timeline-carousel__item-inner">
-          <span class="name">2007</span>
-          <span class="role">Egestas quis ipsum</span>
-          <p>Non odio euismod lacinia at. Egestas quis ipsum suspendisse ultrices gravida. Dui nunc mattis enim ut
-            tellus elementum sagittis vitae. Lectus quam id leo in vitae turpis massa sed elementum. Ridiculus mus
-            mauris vitae ultricies leo integer malesuada. Semper feugiat nibh sed pulvinar proin gravida hendrerit
-            lectus./p>
+          <span class="name">${character.name}</span>
+          <span class="role">${character.role}</span>
+          <p>${character.lore}</p>
         </div>
       </div> -->
       <!--/Timeline item-->
